tests/negative/neg_string_return_type.safe
-- Test: neg_string_return_type
-- Description: String-returning functions reject non-String return expressions.
-- Expected: REJECT type_check_failure

package Neg_String_Return_Type is

   function Broken return String is
   begin
      return 1;
   end Broken;

end Neg_String_Return_Type;
